fixed preference setting, moved preference functions to tournament controller
